@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+CRE: keep map level while we're at it.
+Nicolas Weeger 2010-04-17
+
 CRE: expand maps node if only maps, resize columns to meaningful size.
 Nicolas Weeger 2010-04-17
 
